# DSSC-Maturity-Tool

./: .env.example  .gitignore  Briefing.md  CLAUDE.md  DEPLOYMENT.md  OPERATIONS.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: main.yml  pr.yml  release.yml  security.yml  staging.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9a6864dd3f14_add_users_table.py  add_user_participant_type.py  b3f7c9a1d2e8_add_questionnaire_answers_table.py  c3f2a891e5b7_add_initiatives_table.py  d4e1f2a3b5c6_add_evidence_url_table.py  e5f3a2b4c6d7_add_compliance_report_table.py  f6a4b3c2d1e9_dsi_sp_questionnaire_foundation.py  g7b5c4d3e2f1_add_password_reset_fields.py  h8c6d5e4f3a2_make_contact_fields_nullable.py  i9d7e6f5a4b3_questionnaire_v2_schema_migration.py  make_initiative_description_nullable.py
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  evidence.py  initiatives.py  questionnaire.py  reports.py  scoring.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: assessment.py  evidence.py  initiative.py  questionnaire.py  questionnaire_answer_archive.py  report.py  user.py
backend/app/schemas/: auth.py  evidence.py  initiative.py  questionnaire.py  report.py
backend/app/services/: dimension_scoring.py  mami_config.py  report_generator.py  scoring_engine.py
backend/app/templates/: report.html
backend/scripts/: create_admin.py  export_openapi.py
backend/tests/: README.md  conftest.py  factories.py  test_health.py  test_privacy_canary.py  test_zen_removed.py
backend/tests/api/: test_admin.py  test_auth.py  test_evidence_removed.py  test_questionnaire.py  test_questionnaire_answers.py  test_reports.py  test_scoring.py
backend/tests/benchmark/: test_scoring_regression.py
backend/tests/migrations/: test_v1_archive_migration.py
backend/tests/perf/: test_scoring_perf.py
backend/tests/schemas/: test_questionnaire_schemas.py
backend/tests/services/: test_dimension_scoring.py  test_dssc_config.py  test_report_generator.py
config/: dsi-questionnaire-v2.json  dssc-questionnaire.json  mami-framework.json  questionnaire-v1.json  sp-questionnaire-v2.json
config/scoring/: mami-scoring.json
docs/api/: openapi.json
docs/security/: sbom-backend-cyclonedx.json  sbom-backend-spdx.json  sbom-frontend-cyclonedx.json  sbom-frontend-spdx.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  (+1 more)
nginx/: nginx.conf
(+198 files in other folders)
