[project]
name = "mami-checker-backend"
version = "0.1.0"
description = "MAMI Framework DSI Assessment Tool — CoE-DSC / TNO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel==0.0.33",
    "sqlalchemy>=2.0.14,<2.1.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.2.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "zen-engine==0.51.0",
    "resend>=2.23.0",
    "weasyprint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
